# llm-local-architecture

./: .gitignore  CLAUDE.md  DEPLOY_WINDOWS.md  HARDENING_REPORT.md  PARTIE1_batch_modeles.md  PARTIE2_orchestration.md  PARTIE3_integrite.md  PARTIE4_nis2.md  PARTIE5_controles.md  PARTIE6_architecture.md  PARTIE7_benchmark.md  PARTIE8_verdict.md  README.md  baseline_test_report.txt  bootstrap.sh  deploy-windows.ps1  docker-compose.yml  final_test_report.txt  pyproject.toml  setup-workflow.sh
.github/workflows/: ci.yml  deploy.yml  security.yml
scripts/: bootstrap.sh
src/llm_local_architecture/: __init__.py  config.py  documents.py  exceptions.py  extractors.py  memory.py  ocr.py  orchestrator.py  prompting.py  router.py  schemas.py  storage.py
src/llm_local_architecture/static/: app.js  index.html  styles.css
tests/: test_api_integration.py  test_documents.py  test_extractors.py  test_memory.py  test_ocr.py  test_orchestrator.py  test_prompting.py  test_router.py  test_smoke.py  test_web_app.py
