[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-local-architecture"
version = "0.1.0"
description = "Orchestrateur local déterministe pour modèles LLM via Ollama."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
    "pypdf>=5.0",
    "pypdfium2>=4.30",
    "pillow>=10.0",
    "opencv-python-headless>=4.10",
    "pytesseract>=0.3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
llm-orchestrator = "llm_local_architecture.orchestrator:main"
llm-orchestrator-serve = "llm_local_architecture.orchestrator:serve"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
llm_local_architecture = ["static/*.html", "static/*.css", "static/*.js"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
